fix: add z-index to display toast before homepage content class

--- a/practice/src/css/components/toastify.css
+++ b/practice/src/css/components/toastify.css
@@ -1,7 +1,7 @@
 .toastify {
   cursor: pointer;
   position: absolute;
-  top: 30px;
+  top: 100px;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
@@ -9,6 +9,7 @@
   font-size: 10px;
   color: var(--primary-text-color);
   text-align: center;
+  z-index: 1;
 
   &.toastify-danger {
     background-color: #c32929;
